--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,15 @@
   <body>
 
     <%= yield %>
+
+    <% flash.each do |key, value| %>
+      <div class="alert-box round <%= flash_class(key)%>">
+        <%=value%>
+      </div>
+    <% end %>
     <%= javascript_include_tag "application" %>
+
+
+
   </body>
 </html>
