--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -3,6 +3,6 @@
 
   <%= render 'form' %>
 
-  <%= link_to 'Show', @post %> |
-  <%= link_to 'Back', posts_path %>
+  <%= link_to "Cancel", :back %>
+
 </div>
