--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -1,20 +1,6 @@
-<h2>New project</h2>
+<h1 class="posts-new">New project</h1>
 
-<%= form_for(@project) do |f| %>
-  <div class="field">
-    <%= f.label :name %><br />
-    <%= f.text_field :name %>
-  </div>
+<%= render "form" %>
 
-  <div class="field">
-    <%= f.label :technologies_used %><br />
-    <%= f.text_area :technologies_used %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit %>
-  </div>
-  <% end %>
-
-  <%= link_to 'Back', projects_path %>
+<%= link_to 'Back', projects_path %>
 
