update files with devise auth

--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,3 +1,6 @@
-<h2><%= @project.name %></h2>
+<h2><%= notice %></h2>
   <p>Technologies used: <%= @project.technologies_used %>
 
+
+<%= link_to 'Edit', edit_project_path(@project) %> |
+<%= link_to 'Back', projects_path %>
