--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+  <header>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
@@ -8,29 +8,26 @@
 
     <%= stylesheet_link_tag    "application" %>
     <%= csrf_meta_tags %>
-  </head>
+  </header>
 
   <body>
     <div id="user_nav">
-  <% if user_signed_in? %>
+    <% if user_signed_in? %>
     Signed in as <%= current_user.email %>. Not you?
-   <%= link_to "Sign out", destroy_user_session_path, :method => :delete %>
-  <% else %>
-    <%= link_to "Sign up", new_user_registration_path %> or
-    <%= link_to "Sign in", new_user_session_path %>
-  <% end %>
-</div>
+    <%= link_to "Sign out", destroy_user_session_path, :method => :delete %>
+    <% else %>
+    <%= link_to "Sign up", new_user_registration_path %> |
+    <%= link_to "Sign in", new_user_session_path %> |
+    <%= link_to "Sign in with Twitter", user_omniauth_authorize_path(:twitter) %>
+    <% end %>
+    </div>
 
-    <%= yield %>
-
+  <%= yield %>
     <% flash.each do |key, value| %>
       <div class="alert-box round <%= flash_class(key)%>">
         <%=value%>
       </div>
-  <% end %>
+    <% end %>
     <%= javascript_include_tag "application" %>
-
-
-
   </body>
 </html>
