--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,22 +1,62 @@
 <p id="notice"><%= notice %></p>
+<div id="show-form">
+  <div class="row">
+    <div class="small-8 columns">
+  <h2>Title:</h2>
+    <%= @post.title %>
 
-<p>
-  <b>Title:</b>
-  <%= @post.title %>
-</p>
+  <h2>Body:</h2>
+    <%= @post.body %>
+    <br />
+    <strong>By:
+    <%= @post.author.email %></strong>
+    <br /><br />
 
-<p>
-  <b>Body:</b>
-  <%= @post.body %>
-</p>
+  <h2>Comments:</h2>
+      <% @post.comments.each do |comment| %>
+    <p><b>Commenter email:</b>
+      <%= comment.author_email %>
+    </p>
+    <p><b>Comment:</b>
+      <%= comment.content %>
+    </p>
+    <p>
+      <%= link_to 'Destroy Comment', [comment.post, comment],
+      :confirm => 'Are you sure?',
+      :method => :delete %>
+      <% end %>
+      Please fill out the form below to add a comment.
+      <%= form_for([@post, @post.comments.build]) do |f| %>
 
-<p id="author">
-  <b>By:</b>
-  <%= @post.author.email %>
-</p>
+<div class="field">
+      <%= f.label :author_email, :class => 'left'%>
+      <%= f.text_field :author_email %>
+    <div class="field">
+      <%= f.label :content, :class => 'left' %>
+      <%= f.text_area :content %>
+    </div>
 
- <p id="status"><b>Status: </b><%= @post.published? ? "Published" : "Unpublished" %></p>
+  <% if current_user.role == "editor" || current_user.role == "author" %>
+    <div class="row collapse">
+      <div class="small-2 columns">
+        <%= f.label :approved, class: "right inline", title: "Is this comment published?", data: {tooltip: true } %><br>
+      </div>
+        <%= f.check_box :approved %>
+    </div>
+  <% end %>
 
+  <div class="actions">
+      <%= f.submit %>
+  </div>
+</div>
+<% end %>
 
-<%= link_to 'Edit', edit_post_path(@post) %> |
-<%= link_to 'Back', posts_path %>
+      <p id="status"><b>Status: </b><%= @post.published? ? "Published" : "Unpublished" %></p>
+    </div>
+</div>
+
+<footer class="row">
+  <%= link_to 'Edit', edit_post_path(@post) %> |
+  <%= link_to 'Back', posts_path %>
+</footer>
+
