--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -13,5 +13,5 @@
 <% end %>
 
 <br />
-<%= link_to 'New project', new_project_path %>
+<%= link_to 'New project', new_project_path, remote: true, id: :new_link %>
 
