--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -1,3 +1,4 @@
+<div id="project_errors"></div><br />
 <%= form_for(@project, remote: true) do |f| %>
   <% if @project.errors.any? %>
   <div id="error_explanation">
